# app-store-scraper

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app_store_scraper/: __version__.py
src/app_store_scraper/: __init__.py  _entry.py  _errors.py  _session.py
tests/: test_all.py
