[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-store-scraper"
dynamic = ["version"]
description = "Scrape reviews from Apple's App Store"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "Eric Lim" },
    { name = "Denis Washington" },
]
keywords = [
    "app store",
    "ios",
    "ios apps",
    "podcasts",
    "review",
    "scraper",
    "scraping",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "urllib3>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/futurice/app-store-scraper"
Source = "https://github.com/futurice/app-store-scraper"

[tool.hatch.version]
path = "src/app_store_scraper/__about__.py"

[tool.hatch.envs.default]
path = ".venv"
dependencies = [
    "black", 
    "faker", 
    "pytest", 
    "pytest-httpserver", 
    "ruff",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "faker", 
    "pytest-httpserver",
  ]
